--- a/language/i18n_en.json
+++ b/language/i18n_en.json
@@ -1774,7 +1774,7 @@
     "favourite_program_name": "FAVORITE PROGRAM NAME",
     "please_select_delete_data": "Please select the data to delete",
     "your_laundry_is_done": "Your laundry is done",
-    "drying_in_x_has_ended": "Drying in ## has ended",
+    "drying_in_x_has_ended": "Drying in ## has ended.",
     "please_close_door": "Please close the door",
     "room_temperature_linkage": "Room Temperature Linkage",
     "room_temperature_linkage_desc": "After this function is enable, all air conditioners that are online and running will be adjusted to the preset temperature",
@@ -2898,7 +2898,7 @@
     "wash_stopped": "Wash stopped",
     "demo_mode": "Demo mode",
     "delete_the_favourite_tips": "Are you sure you want to delete the favourite?",
-    "delete_all_favourite_tips": "Are you sure you want to delete all favourites?",
+    "delete_all_favourite_tips": "Are you sure you want to delete all favorites?",
     "tri_dhw_priority_tip_key": "When the customer activates the demand for hot water, the unit will prioritize heating the hot water and temporarily suspend the cooling/heating mode.",
     "tri_sterilization_tip_key": "Disinfection can be manually opened, and the temperature of the tank is raised to 75℃, which will keep the water cleaner and healthy.",
     "tri_climate_curve_key": "It has integrated automatic outlet water temperature setting functions for heating and cooling modes. After activating this function, the unit’s target temperature will be automatically set based on the ambient temperature.",
